# FindingTheFinger_2

./: .gitignore  pyproject.toml  requirements.txt
data/: sources.json
db/: models.py  pyproject.toml  seed_taxonomy.py  session.py
docs/: dependencies.md
pipeline/: alembic.ini  pyproject.toml  readme.md  sources.md
pipeline/alembic/: env.py
pipeline/alembic/versions/: 0ac3ffc1cd42_initial_schema.py  9d6e4c2b7a10_add_embedding_spans.py  b1f8d0d8c3a1_normalize_sources.py
pipeline/pipeline/parsers/: analects.py  anguttara_nikaya.py  base.py  bhagavatam.py  bible.py  chuang_tzu.py  dao_de_jing.py  dhammapada.py  diamond_sutra.py  digha_nikaya.py  enuma_elish.py  gilgamesh.py  gita.py  jataka.py  khuddaka_nikaya.py  kojiki.py  mahabharata.py  majjhima_nikaya.py  poetic_edda.py  prose_edda.py  quran.py  ramayana.py  samyutta_nikaya.py  sggs.py  sutta_pitaka_common.py  upanishads.py  vendidad.py  yasna.py  yoga_sutras.py
pipeline/pipeline/pipeline/: ingest.py
pipeline/pipeline/sources/: __init__.py  catalog.py
pipeline/scripts/: download_sggs.sh  ingest_all.py  mysql_to_sqlite.py  pipeline.py  taxonomy_tree.py
pipeline/scripts/embeddings/: build_embedding_spans.py  embed_nomic.py  embed_span_nomic.py
pipeline/scripts/embeddings/utils/: __init__.py  embedding.py
pipeline/sources/: __init__.py  catalog.py
scripts/: compute_umap.py  pyproject.toml
scripts/analysis/: README.md  __init__.py  (+3 more)
webapp/backend/: deps.py  embedder.py  main.py  pyproject.toml  requirements.txt  schemas.py  taxonomy.py
webapp/backend/routers/: corpora.py  search.py  units.py
(+324 files in other folders)
